fix overlapping loan list href

--- a/src/app/shared/loan-list/loan-list.component.scss
+++ b/src/app/shared/loan-list/loan-list.component.scss
@@ -72,6 +72,8 @@
       border-radius: 10px 10px 0 0;
     }
     &--action {
+      position: relative;
+      z-index: 3;
       padding: 17px 0 17px 17px;
     }
 
